--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ python-dotenv>=1.0.0
 supabase>=2.7.1
 cryptography>=42.0.0
 httpx>=0.28.0
+
+# Shared OpenAPI client (local path; replace with published package for deploy)
+-e ../intellex-shared/packages/python
