feat: Enable asynchronous message processing with Redis queue, communications client, and enhanced job tracking.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ python-dotenv>=1.0.0
 supabase>=2.7.1
 cryptography>=42.0.0
 httpx>=0.28.0
+redis>=5.0.0
 
 # Shared OpenAPI client (local path; replace with published package for deploy)
 -e ../intellex-shared/packages/python
