--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ cryptography>=42.0.0
 httpx>=0.28.0
 redis>=5.0.0
 
-# Shared OpenAPI client (local path; replace with published package for deploy)
--e ../intellex-shared/packages/python
+# Shared OpenAPI client is optional at runtime.
+# For local dev, install it separately with:
+#   pip install -e ../intellex-shared/packages/python
