--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ supabase>=2.7.1
 cryptography>=42.0.0
 httpx>=0.28.0
 redis>=5.0.0
+aiohttp>=3.9.0
 
 # Shared OpenAPI client is optional at runtime.
 # For local dev, install it separately with:
